force-app/main/default/objects/Authorization_Details__c/Authorization_Details__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Save user name and access token</description>
    <label>Authorization Details</label>
</CustomObject>