force-app/main/default/objects/Authorization_Details__c/fields/Audience_URL__c.field-meta.xml
<CustomField>
    <fullName>Audience_URL__c</fullName>
    <label>Audience URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>