force-app/main/default/objects/Authorization_Details__c/fields/Connected_App_Type__c.field-meta.xml
<CustomField>
    <fullName>Connected_App_Type__c</fullName>
    <label>Connected App Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>